@@ -469,7 +469,7 @@ bool CGUIMediaWindow::Update(const CStdString &strDirectory)
     m_history.ClearPathHistory();
 
   int iWindow = GetID();
-  bool bOkay = (iWindow == WINDOW_MUSIC_FILES || iWindow == WINDOW_VIDEOS || iWindow == WINDOW_FILES || iWindow == WINDOW_PICTURES);
+  bool bOkay = (iWindow == WINDOW_MUSIC_FILES || iWindow == WINDOW_VIDEO_FILES || iWindow == WINDOW_FILES || iWindow == WINDOW_PICTURES);
   if (strDirectory.IsEmpty() && m_vecItems.IsEmpty() && bOkay) // add 'add source button'
   {
     CStdString strLabel = g_localizeStrings.Get(1026);
